[package]
name = "tfhe-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.12.0", features = ["base64"] }
serde_json = "1.0"
bincode = "1.3"
tfhe = { version = "1.0.0", features = ["boolean", "shortint", "integer"] }
